			   XPCE ChangeLog
			   ==============

* ADDED: full_screen to `@pce->show_console'.

* ADDED: Start for `frame->status: full_screen' (work in progress).

* FIXED: `frame->status: window' for the X11 version, opening the frame
  if it was iconic.

* FIXED: `persistent_frame' to save deeply nested subwindow layout.

* ADDED: Win32: `@pce<-user' to obtain the name of the currently logged
  on user.

* ADDED: PceEmacs: report key-bindings in replace mode.

* FIXED: `frame->set' force negative and 0-width/height frames to be
  at least one pixel to avoid errors from the Window system.

* FIXED: Avoid loop in textimage redraw if it is 0-pixels wide.

* FIXED: Access of freed memory in `display->inspect', used by the
  balloon system (probably harmless, but spotted in allocation debug-mode).

* FIXED: Disable dabbrev_expand in read-only editor.

* FIXED: PceEmacs Prolog mode: avoid an XPCE crash when replacing
  singletons.

* FIXED/MODIFIED: PceEmacs ^X^B (switch_to_buffer): properly handle
  complete but not unique buffernames and open the buffer in a
  new window if the current window is sticky.


VERSION 6.0.3, distributed with SWI-Prolog 5.0.3
================================================

* FIXED: WSAEWOULDBLOCK problems in windows socket layer.

* INSTALL: Properly install swipl.rc in the MacOS version to bind XPCE
  to the normal Prolog executable swipl.

* FIXED/MODIFIED: `stream <-read_line': timeout argument is now a float
  representing timeout in seconds for compatibility with other time
  specifiers.  Return is now @nil timeout, failure on end-of-input.
  Behaviour between Windows and Unix version is consistent.

* FIXED: `frame->geometry' on Windows with negative X and Y.  ->geometry now
  ensures part of the title-bar of the window is visible, so you can move and
  resize the window.

* ADDED: `list_browser->selection_style' as a method.

* FIXED: Help-balloons on loc-still

* FIXED: make rpm-install: install the manual search index.
